RESOLVED FIXED64408
[Qt] Compilation fails on disabling TextureMapper
https://bugs.webkit.org/show_bug.cgi?id=64408
Summary [Qt] Compilation fails on disabling TextureMapper
Dinu Jacob
Reported 2011-07-12 16:30:36 PDT
Qt WebKit build fails with the following error on disabling texturemapper: ../../../Source/WebCore/platform/graphics/qt/GraphicsLayerQt.cpp: In member function ‘virtual void WebCore::GraphicsLayerQt::setContentsBackgroundColor(const WebCore::Color&)’: ../../../Source/WebCore/platform/graphics/qt/GraphicsLayerQt.cpp:1246: error: ‘setContentsBackgroundColor’ is not a member of ‘WebCore::GraphicsLayer’ make[1]: *** [obj/release/GraphicsLayerQt.o] Error 1 GraphicsLayer::setContentsBackgroundColor was recently renamed as 'GraphicsLayer::setContentsToBackgroundColor'
Attachments
Patch (2.38 KB, patch)
2011-07-12 16:45 PDT, Dinu Jacob
no flags
Dinu Jacob
Comment 1 2011-07-12 16:31:20 PDT
Patch coming
Dinu Jacob
Comment 2 2011-07-12 16:45:08 PDT
WebKit Review Bot
Comment 3 2011-07-16 16:01:59 PDT
Comment on attachment 100588 [details] Patch Clearing flags on attachment: 100588 Committed r91155: <http://trac.webkit.org/changeset/91155>
WebKit Review Bot
Comment 4 2011-07-16 16:02:03 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.