[Qt] Compilation fails on disabling TextureMapper https://bugs.webkit.org/show_bug.cgi?id=64408

Fix compilation error due to API name change in GraphicsLayer

Patch by Dinu Jacob <dinu.jacob@nokia.com> on 2011-07-16
Reviewed by Noam Rosenthal.

* platform/graphics/qt/GraphicsLayerQt.cpp:
(WebCore::GraphicsLayerQt::setContentsToBackgroundColor):
* platform/graphics/qt/GraphicsLayerQt.h:

Canonical link: https://commits.webkit.org/80406@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@91155 268f45cc-cd09-0410-ab3c-d52691b4dbfc