Source/WebCore/platform/graphics/qt/GraphicsLayerQt.h
@@ -76,7 +76,7 @@ public:
     virtual void setContentsNeedsDisplay();
     virtual void setContentsToMedia(PlatformLayer*);
     virtual void setContentsToCanvas(PlatformLayer*);
-    virtual void setContentsBackgroundColor(const Color&);
+    virtual void setContentsToBackgroundColor(const Color&);
     virtual void setContentsOrientation(CompositingCoordinatesOrientation orientation);
     virtual void distributeOpacity(float);
     virtual float accumulatedOpacity() const;
